fixed menu overlapping

--- a/resources/public/css/main.scss
+++ b/resources/public/css/main.scss
@@ -144,6 +144,7 @@ html, body {
     &-options {
         right: 5px;
         position: fixed;
+        z-index: 10;
 
         text-align: right;
         cursor: pointer;
